--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <h1>William Broker</h1> 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima mollitia voluptatum hic debitis, error aperiam placeat similique aliquam ad laboriosam vero magni eveniet molestias adipisci dolorem at maiores alias quam?</p>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut dolorum veritatis deleniti ut iure rerum itaque totam doloremque libero earum perspiciatis porro ipsa vitae accusamus, nisi sint qui esse laborum.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis, delectus libero nesciunt dolorem debitis natus molestiae velit sint repellat, accusamus reprehenderit explicabo alias modi provident impedit, aliquid officia magni hic!</p>
+   <h1>William Broker</h1>
+    <h2>About Me</h2>
+        <p>Hello! I am a senior physics and music double major at Haverford College. Currently, I am also working with Sandia National Laboratories under Dr. Juan P. Mendez to simulate processes important to materials science.</p>
+        <p>I am proficient with Python, LAMMPS, MATLAB, HPC and the Linux interface.</p>
+        <p>sesese</p>
 </body>
 </html>
+
