--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h2>About Me</h2>
         <p>Hello! I am a senior physics and music double major at Haverford College. Currently, I am also working with Sandia National Laboratories under Dr. Juan P. Mendez to simulate processes important to materials science.</p>
         <p>I am proficient with Python, LAMMPS, MATLAB, HPC and the Linux interface.</p>
-        <p>sesese</p>
+        <p>Outside of school and work, I'm big into the outdoors---birdwatching, hiking, and biking---and I am an avid classical pianist.</p>
+    <h2>Links</h2>
 </body>
 </html>
+
 
