--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <p>I am proficient with Python, LAMMPS, MATLAB, HPC and the Linux interface.</p>
         <p>Outside of school and work, I'm big into the outdoors---birdwatching, hiking, and biking---and I am an avid classical pianist.</p>
     <h2>Links</h2>
+        <iframe src="CV Jan 2026.pdf" frameborder="0"></iframe>
 </body>
 </html>
+
 
 
