--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
         <p>I am proficient with Python, LAMMPS, MATLAB, HPC and the Linux interface.</p>
         <p>Outside of school and work, I'm big into the outdoors---birdwatching, hiking, and biking---and I am an avid classical pianist.</p>
     <h2>Links</h2>
-        <iframe src="CV Jan 2026.pdf" frameborder="0"></iframe>
+        <iframe src="CV Jan 2026.pdf" width="600" height="780" style="border: none;"></iframe>
+        <a href="https://www.linkedin.com/in/william-broker-6554a2296/">My LinkedIn</a>
+        <a href="https://github.com/WilliamBroker/Si-B-Delta-Layer-Simulations">My Github repository for my project with Dr. Mendez</a>
 </body>
 </html>
+
 
 
 
