--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <h1>William Broker</h1>
     <h2>About Me</h2>
         <p>Hello! I am a senior physics and music double major at Haverford College. Currently, I am also working with Sandia National Laboratories under Dr. Juan P. Mendez to simulate processes important to materials science.</p>
-        <p>I am proficient with Python, LAMMPS, MATLAB, HPC and the Linux interface.</p>
+        <p>I am proficient with Python, LAMMPS, MATLAB, HPC and the Linux interface. I am learning HTML (as evidenced by this crude webpage).</p>
         <p>Outside of school and work, I'm big into the outdoors---birdwatching, hiking, and biking---and I am an avid classical pianist.</p>
     <h2>Links</h2>
         <iframe src="CV Jan 2026.pdf" width="600" height="780" style="border: none;"></iframe>
@@ -17,6 +17,7 @@
         <a href="https://github.com/WilliamBroker/Si-B-Delta-Layer-Simulations">My Github repository for my project with Dr. Mendez</a>
 </body>
 </html>
+
 
 
 
